Changelog for Yii User Management Module (Yum) since Version 0.3

New in 0.6:
Features:
- Added Layout for installation
- Added YumHelper class (tomasz.suchanek)
- Added YumMenuItemHelper class (tomasz.suchanek)
- Added YumWebModule class (tomasz.suchanek)
- Added profile field grouping functionality (tomasz.suchanek)
- Added allowCaptcha property to UserModule, to controle whether Captcha is required (tomasz.suchanek)
- Added new column for profile field definition: hint (tomasz.suchanek) 
- Updated AR models documentation with phpdoc @property improve code usage (tomasz.suchanek)
- Yum can by used as submodule. To avoid names confict all models are renamed:
 * Messages => YumMessages,
 * Profile => YumProfile,
 * ProfileField => YumProfileField,
 * RegistrationForm => YumRegistrationForm,
 * Role => YumRole
 * User => YumUser,
 * UserChangePassword => YumUserChangePassword,
 * UserLogin => YumUserLogin,
 * UserRecoveryForm => YumUserRecoveryForm.
 .. following components:
 * UserIdentity => YumUserIdentity,
 * WebUser => YumWebUser, 
 .. following controllers
 * DefaultController => YumDefaultController,
 * InstallController => YumInstallcontroller,
 * MessageController => YumMessageController,
 * RoleController => YumRoleController,
 * UserController => YumUserController,  
Note that this change may break the code.

Enhancements:
 - Login url support now all placeholder defined in YumHelper::route (tomasz.suchanek)
 - Unified naming convention for all links description (only first letter in sentence is uppercased) (tomasz.suchanek)
 - Added title property to YumController instead of displaying heading directly in views. Heading is now displayed in layout according to use needs (tomasz.suchanek)
 - Commas and semicolons can be used as range separators (tomasz.suchanek)
 
Bug Fixes:
- Changed UserModule::$returnUrl UserModule::$returnLogoutUrl calls to Yii::app()->controller->module->returnUrl/returnLogoutUrl (steve)