@@ -147,7 +147,8 @@ return array(
 				'Delete Message' => 'Nachricht löschen',
 				'Reply to Message' => 'Auf diese Nachricht antworten',
 	'Back to inbox' => 'Zurück zum Posteingang',
-	'My Inbox' => 'Mein Posteingang',
+	'My inbox' => 'Mein Posteingang',
+	'Delete Account' => 'Zugang löschen',
 	'Users' => 'Benutzer',
 	'You have new Messages !' => 'Sie haben neue Nachrichten !',
 	'Update User' => 'Benutzer bearbeiten',
